# socket-programming-Qt

./: README.md
mytcpclient/: CMakeLists.txt  main.cpp  mytcpclient.cpp  mytcpclient.h
mytcpserver/: CMakeLists.txt  main.cpp  mytcpserver.cpp  mytcpserver.h
